deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-deployment
  labels:
    app: hello-world
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
        - name: hello-world
          image: containertools/hello-world
          imagePullPolicy: "Always"
          ports: 
            - containerPort: 8080
              name: http-port
          volumeMounts:
            - mountPath: /vol
              name: hello-world-vol
      volumes:
        - name: hello-world-vol
          persistentVolumeClaim:
            claimName: hello-world-pvc
      securityContext:
        fsGroup: 0
        runAsUser: 0
